--- a/g/style.css
+++ b/g/style.css
@@ -3,6 +3,9 @@ div{
     height: 200px;
     background-color: antiquewhite;
     margin: 20px;
+    padding: 20px;
+}
+.ffg{
     display: flex;
     flex-direction: row;
 }
